<resources>
    <string name="app_name">Deswita</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_post">woow, keren banget ni tempat gk ada lawan seantero du...</string>
    <!-- Welcome page activity -->
    <string name="splash_screen_text">Deswita</string>
    <string name="skip">Lewati</string>

    <!-- Login Activity String -->
    <string name="login_greet">Hai.\nSelamat Datang</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa kata sandi?</string>
    <string name="login">Masuk</string>
    <string name="not_have_account">Belum punya akun?</string>
    <string name="register">Daftar</string>

    <!-- Register Activity String -->
    <string name="register_greet">Registrasi</string>
    <string name="register_sentence">Silahkan registrasi untuk masuk</string>
    <string name="name">Name</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="or">Atau</string>
    <string name="title_activity_splash_screen">Deswita</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">First Fragment</string>
    <string name="ongoing_event">Ongoing Event</string>
    <string name="new_place">New Place!</string>
    <string name="destination_desc">Rumah Tjong A Fie adalah rumah dua lantai di Jalan Ahmad Yani di Kesawan, Medan, Sumatra Utara, yang dibangun oleh Tjong A Fie, pedagang Hakka yang memiliki banyak tanah perkebunan di Medan. Selengkapnya</string>

    <string name="search_history">Search History</string>
    <string name="destination">Destination</string>
    <string name="location">Location</string>
    <string name="distance">Distance</string>

    <!-- Upcoming event -->
    <string name="upcoming_event">Upcoming event in</string>
    <string name="upcoming_event_date">21 Desember 2021</string>

    <string name="add_event">Add Event</string>
    <string name="add_story">Add Story</string>
    <string name="date_time"><![CDATA[Date & time]]></string>
    <string name="review_content">Tempat bersejarah, belajar sejarah, salah satu icon sejarah suku tionghoa datang ke kota medan pada zaman kesultanan Deli Medan</string>
    <string name="add_destination">Add Destination</string>

    <string name="event_tab">Events</string>
    <string name="destination_tab">Destinations</string>
    <string name="story_tab">Stories</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string name="banner_ad_unit_id">ca-app-pub-8993378482639161~6401341293</string>
</resources>